--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "^0.17.7",
+    "react-native-webview": "^11.17.2",
+    "react-native-wheel-of-fortune": "^1.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
